Current js has working function for conversion. Next step is inputs

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <title>Currency Converter</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" async></script>
-</head>
-<body>
 
+</head>
+
+<body>
+    <div class="currencies"></div>
 </body>
 </html>
